<resources>
    <string name="app_name">Weather ForeCasts</string>
    <string name="weather">Weather</string>
    <string name="forecast">ForeCasts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hourly_forecasts">Hourly_ Forecasts</string>
    <string name="order_confirmation"> Are you sure you want to choose this location ?</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="home">Home</string>
    <string name="fav">Favourite</string>
    <string name="alert">Alert</string>
    <string name="settings">Settings</string>

    <string name="humidity_label">Humidity %1$d%%</string>
    <string name="cloud_label">Cloud %1$d%%</string>
    <string name="pressure_label">Pressure %1$d</string>
    <string name="wind_speed_label">Wind Speed %1$.1f</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="windspeed">WindSpeed</string>
    <string name="miles_hour">Miles/hour</string>
    <string name="meter_sec">Meter/sec</string>
    <string name="temperature">Temperature</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>

    <string name="delete_alarm_title">Delete Alarm</string>
    <string name="delete_alarm_message">Are you sure you want to delete this alarm?</string>

    <string name="delete_fav_title">Delete Favourite</string>
    <string name="delete_fav_message">Are you sure you want to delete this Favourite?</string>
    <string name="yes">Yes</string>
    <string name="no_alert_weather">No Alert Weather is Fine</string>
    <string name="no_alert_weather_good">No Alert: Weather is good</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="location_missing">location_missing\n</string>
    <string name="please_enter_data_and_time">ebter_data_and_time</string>


</resources>