<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <group

        android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_home_24"

            android:title="@string/home"/>


       <item
           android:id="@+id/favouritFragment"
           android:icon="@drawable/ic_baseline_favorite_24"
           android:title="@string/fav"/>


       <item
           android:id="@+id/alertFragment"
           android:icon="@drawable/ic_baseline_add_alert_24"
           android:title="@string/alert"/>


       <item
           android:id="@+id/settingFragment"
           android:icon="@drawable/ic_baseline_settings_24"
           android:title="@string/settings"/>



   </group>


</menu>